# restapi/operations/users/identify_user_responses.go
@@ -1,0 +1,101 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package users
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"Adornme/models"
+)
+
+// IdentifyUserOKCode is the HTTP code returned for type IdentifyUserOK
+const IdentifyUserOKCode int = 200
+
+/*
+IdentifyUserOK Identification result
+
+swagger:response identifyUserOK
+*/
+type IdentifyUserOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *IdentifyUserOKBody `json:"body,omitempty"`
+}
+
+// NewIdentifyUserOK creates IdentifyUserOK with default headers values
+func NewIdentifyUserOK() *IdentifyUserOK {
+
+	return &IdentifyUserOK{}
+}
+
+// WithPayload adds the payload to the identify user o k response
+func (o *IdentifyUserOK) WithPayload(payload *IdentifyUserOKBody) *IdentifyUserOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the identify user o k response
+func (o *IdentifyUserOK) SetPayload(payload *IdentifyUserOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *IdentifyUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// IdentifyUserBadRequestCode is the HTTP code returned for type IdentifyUserBadRequest
+const IdentifyUserBadRequestCode int = 400
+
+/*
+IdentifyUserBadRequest Invalid identifier
+
+swagger:response identifyUserBadRequest
+*/
+type IdentifyUserBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewIdentifyUserBadRequest creates IdentifyUserBadRequest with default headers values
+func NewIdentifyUserBadRequest() *IdentifyUserBadRequest {
+
+	return &IdentifyUserBadRequest{}
+}
+
+// WithPayload adds the payload to the identify user bad request response
+func (o *IdentifyUserBadRequest) WithPayload(payload *models.ErrorResponse) *IdentifyUserBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the identify user bad request response
+func (o *IdentifyUserBadRequest) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *IdentifyUserBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
